--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-light bg-faded">
   <a v-link="{path: '/'}" class="navbar-brand">楽譜管理</a>
   <ul class="nav navbar-nav">
-    <li class="nav-item" :class="{active: active === 'songs'}"><a v-link="{path: 'songs'}" class="nav-link">曲</a></li>
-    <li class="nav-item" :class="{active: active === 'albums'}"><a v-link="{path: 'albums'}" class="nav-link">アルバム</a></li>
+    <li class="nav-item" :class="{active: active === 'songs'}"><a v-link="{path: '/songs'}" class="nav-link">曲</a></li>
+    <li class="nav-item" :class="{active: active === 'albums'}"><a v-link="{path: '/albums'}" class="nav-link">アルバム</a></li>
   </ul>
   <ul class="nav navbar-nav pull-right">
-    <li class="nav-item" :class="{active: active === 'settings'}"><a v-link="{path: 'settings'}" class="nav-link">設定</a></li>
+    <li class="nav-item" :class="{active: active === 'settings'}"><a v-link="{path: '/settings'}" class="nav-link">設定</a></li>
   </ul>
 </nav>
