デコレーターを更新

--- a/src/components/create/create.html
+++ b/src/components/create/create.html
@@ -102,7 +102,7 @@
         <li class="list-group-item" v-for="video in videos">
           <fieldset class="form-group">
             <label for="">動画のID</label>
-            <input type="text" name="" id="" class="form-control" v-model="video.videoId">
+            <input type="text" name="" id="" class="form-control" v-model="video.url">
           </fieldset>
           <fieldset class="form-group">
             <label for="">動画のタイトル</label>
