--- a/src/components/song/song.html
+++ b/src/components/song/song.html
@@ -3,7 +3,7 @@
   <div class="lead" v-text="song.lead"></div>
 
   <div>
-    <a v-link="{name: 'edit', params: {id: '30'}}">内容を編集する</a>
+    <a v-link="{name: 'edit', params: {id: $route.params.id}}">内容を編集する</a>
   </div>
   <hr>
   <section>
