--- a/src/partials/form/song.html
+++ b/src/partials/form/song.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>新規作成</h1>
+  <h1 v-text="title"></h1>
   <form @submit.prevent="submit">
 
     <div class="card">
@@ -40,7 +40,7 @@
 
         <fieldset class="form-group">
           <label for="lead">リード文</label>
-          <input type="text" id="lead" name="song.lead" class="form-control">
+          <input type="text" id="lead" name="song.lead" class="form-control" v-model="song.lead">
         </fieldset>
 
         <fieldset class="form-group">
@@ -66,7 +66,7 @@
           <fieldset class="form-group">
             <label for="">楽器</label>
             <select name="" id="" class="form-control c-select" v-model="part.type">
-              <option value="エレクトーン" selected>エレクトーン</option>
+              <option value="エレクトーン">エレクトーン</option>
               <option value="ピアノ">ピアノ</option>
             </select>
           </fieldset>
@@ -83,7 +83,6 @@
             <label for="" class="checkbox-inline">
               <input type="checkbox" name="" id="" value="リズム" v-model="part.keyboards"> リズム
             </label>
-            <div class="text-muted">{{keyboards}}</div>
           </fieldset>
           <button type="button" class="btn btn-danger" :disabled="!enableRemovePart" @click="removePart(part)">削除</button>
         </li>
