--- a/src/components/songs/songs.html
+++ b/src/components/songs/songs.html
@@ -1,12 +1,16 @@
 <div>
-  <div class="form-group">
-    <label for="search">検索語句</label>
-    <div class="input-group">
-      <input type="search" id="search" name="search" class="form-control" v-model="text" @keyup.enter="search" placeholder="曲名のみ">
-      <div class="input-group-btn">
-        <button class="btn btn-secondary" @click="search">検索</button>
+  <form @submit.prevent="search">
+    <div class="form-group">
+      <div class="input-group">
+        <input type="search" id="search" name="search" class="form-control" v-model="title" placeholder="入力してください">
+        <div class="input-group-btn">
+        <button class="btn btn-secondary">検索</button>
       </div>
     </div>
+  </form>
+  </div>
+  <div class=" text-center" v-if="$loadingRouteData">
+    <div class="spinner-loader">Loading</div>
   </div>
 
   <div class="list-group">
