--- a/src/components/album/album.html
+++ b/src/components/album/album.html
@@ -5,7 +5,7 @@
   <a class="btn btn-secondary" id="addSong" :href="href" target="_blank">ヤマハのサイトを表示（外部サイト）</a>
   <hr>
   <div class="list-group">
-    <a class="list-group-item" v-for="song in songs" track-by="id" v-link="{name: 'song', params: {id: song.id}}">
+    <a class="list-group-item" v-for="song in songs | orderBy 'page'" track-by="id" v-link="{name: 'song', params: {id: song.id}}">
       <h4 class="list-group-item-heading" v-text="song.title"></h4>
       <div>{{song.lead}}</div>
       <div>{{song.artist}} ｜ {{song.type}} ｜ {{song.grade}} ｜ {{song.people}}人</div>
