--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -15,5 +15,8 @@
     <li class="nav-item" :class="{active: active === 'settings'}">
       <a v-link="{path: '/settings'}" class="nav-link">設定</a>
     </li>
+    <li class="nav-item">
+      <a href="" class="nav-link" v-link="{path: '/logout'}">ログアウト</a>
+    </li>
   </ul>
 </nav>
