--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -18,5 +18,8 @@
     <li class="nav-item">
       <a href="" class="nav-link" v-link="{path: '/logout'}">ログアウト</a>
     </li>
+    <li class="nav-item">
+      <a href="" class="nav-link" v-link="{path: '/login'}">ログイン</a>
+    </li>
   </ul>
 </nav>
