--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -2,7 +2,7 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="card card-block">
       <h4 class="card-title">ログイン</h4>
-      <form @submit.prevent>
+      <form @submit.prevent="submit">
         <fieldset class="form-group">
           <label for="username">ユーザー名</label>
           <input type="text" name="username" id="username" class="form-control" v-model="username">
@@ -11,7 +11,7 @@
           <label for="password">パスワード</label>
           <input type="password" name="password" id="password" class="form-control" v-model="password">
         </fieldset>
-        <button type="button" @click="submit" class="btn btn-primary">ログインする</button>
+        <button type="submit" class="btn btn-primary">ログインする</button>
         <a v-link="{name: 'register'}" class="btn btn-secondary">ユーザ登録画面</a>
       </form>
     </div>
