--- a/src/components/songs/songs.html
+++ b/src/components/songs/songs.html
@@ -4,7 +4,7 @@
       <div class="input-group">
         <input type="search" id="search" name="search" class="form-control" v-model="title" placeholder="入力してください">
         <div class="input-group-btn">
-        <button class="btn btn-secondary">検索</button>
+        <button type="submit" class="btn btn-secondary">検索</button>
       </div>
     </div>
   </form>
@@ -18,7 +18,7 @@
       <h4 class="list-group-item-heading" v-text="song.title"></h4>
       <div>{{song.lead}}</div>
       <div>{{song.year}}年{{song.month}}月号</div>
-      <div>{{song.artist}} ｜ {{song.type}} ｜ {{song.grade}} ｜ {{song.people}}人</div>
+      <div>{{song.artist}} &brvbar; {{song.type}} &brvbar; {{song.grade}} &brvbar; {{song.people}}人</div>
     </a>
   </div>
 </div>
