--- a/src/components/songs/songs.html
+++ b/src/components/songs/songs.html
@@ -1,24 +1,14 @@
-<div>
-  <form @submit.prevent="search">
-    <div class="form-group">
-      <div class="input-group">
-        <input type="search" id="search" name="search" class="form-control" v-model="title" placeholder="入力してください">
-        <div class="input-group-btn">
-        <button type="submit" class="btn btn-secondary">検索</button>
-      </div>
+<div class="songs-wrapper" :class="{'show': modal}" @click="close">
+  <div class="songs-modal-header flex-container" @click.stop>
+    <h2 class="flex-content">検索結果</h2>
+    <div @click="close">閉じる</div>
+  </div>
+  <div class="songs" @click.stop>
+    <cell v-for="song in songs" :title="song.title" :artist="song.artist" :lead="song.lead" @click.stop="close"></cell>
+    <div class="button-wrapper">
+      <button type="button" class="button expanded brand" :disabled="loading" @click.stop="load">
+        さらに読み込む
+      </button>
     </div>
-  </form>
-  </div>
-  <div class=" text-center" v-if="$loadingRouteData">
-    <div class="spinner-loader">Loading</div>
-  </div>
-
-  <div class="list-group">
-    <a class="list-group-item" v-for="song in songs" track-by="id" v-link="{name: 'song', params: {id: song.id}}">
-      <h4 class="list-group-item-heading" v-text="song.title"></h4>
-      <div>{{song.lead}}</div>
-      <div>{{song.year}}年{{song.month}}月号</div>
-      <div>{{song.artist}} | {{song.type}} | {{song.grade}} | {{song.people}}人</div>
-    </a>
   </div>
 </div>
