--- a/src/components/songs/cell.html
+++ b/src/components/songs/cell.html
@@ -1,6 +1,6 @@
 <a class="song-cell" href="#" @click.prevent="clicked">
-  <div class="year">月刊エレクトーン2007年4月号&nbsp;&nbsp;&nbsp;&nbsp;6級</div>
-  <div class="lead">{{lead}}</div>
-  <h2 class="title">{{title}}</h2>
-  <div class="artist">{{artist}}</div>
+  <div class="year">月刊エレクトーン{{song.year}}年{{song.month}}月号&nbsp;&nbsp;&nbsp;&nbsp;{{song.grade}}</div>
+  <div class="lead">{{song.lead}}</div>
+  <h2 class="title">{{song.title}}</h2>
+  <div class="artist">{{song.artist}}</div>
 </a>
