--- a/src/components/songs/songs.scss
+++ b/src/components/songs/songs.scss
@@ -1,20 +1,20 @@
 .songs-wrapper {
   display: none;
   position: fixed;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: $reveal-overlay-background;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   padding: 30px;
-  z-index: 1000;
+  z-index: $reveal-zindex;
 
   &.show {
     display: flex;
     flex-direction: column;
   }
 
-  @include breakpoint(medium) {
+  @include breakpoint(768px) {
     border-right: 1px solid $medium-gray;
     display: block;
     position: static;
@@ -42,7 +42,7 @@
   display: flex;
   height: 80px;
 
-  @include breakpoint(medium) {
+  @include breakpoint(768px) {
     display: none;
   }
 
@@ -57,7 +57,7 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 
-  @include breakpoint(medium) {
+  @include breakpoint(768px) {
     overflow-y: auto;
   }
 }
