--- a/src/components/songs/cell.html
+++ b/src/components/songs/cell.html
@@ -1,5 +1,5 @@
 <a class="song-cell" v-link="{name: 'song', params: {id: song.id}}">
-  <div class="year">月刊エレクトーン{{song.year}}年{{song.month}}月号&nbsp;&nbsp;&nbsp;&nbsp;{{song.grade}}</div>
+  <div class="year">月刊エレクトーン{{song.year}}年{{song.month}}月号&nbsp;{{song.grade}}</div>
   <div class="lead">{{song.lead}}</div>
   <h2 class="title">{{song.title}}</h2>
   <div class="artist">{{song.artist}}</div>
