--- a/src/components/top/top.html
+++ b/src/components/top/top.html
@@ -1,7 +1,7 @@
 <div>
   <h1>楽譜管理</h1>
   <ul>
-    <li><a href="#">曲を登録する</a></li>
+    <li><a v-link="{name: 'create'}">曲を登録する</a></li>
     <li><a href="#">ログインする</a></li>
   </ul>
 </div>
