--- a/src/components/songs/songs.scss
+++ b/src/components/songs/songs.scss
@@ -19,7 +19,7 @@
     display: block;
     position: static;
     background-color: $white;
-    width: 320px;
+    width: 300px;
     height: auto;
     padding: 0px;
 
@@ -43,7 +43,7 @@
   height: 80px;
 
   @include breakpoint(768px) {
-    display: none;
+    display: none !important;
   }
 
   h2 {
@@ -90,7 +90,7 @@
     font-size: 16px;
   }
 
-  &:hover {
-    background-color: #eee;
+  &:hover, &.v-link-active {
+    background-color: lighten($color: $primary-color, $amount: 40%);
   }
 }
