BEMで少し書き換え

--- a/src/components/songs/songs.html
+++ b/src/components/songs/songs.html
@@ -1,9 +1,9 @@
-<div class="songs-wrapper" :class="{'show': modal}" @click.self="close">
-  <div class="songs-modal-header flex-container">
+<div class="songs" :class="{'songs--show': modal}" @click.self="close">
+  <div class="songs__header flex-container">
     <h2 class="flex-content">検索結果</h2>
     <div @click="close">閉じる</div>
   </div>
-  <div class="songs">
+  <div class="songs__inner">
     <cell v-for="song in songs" :song="song" @click="close"></cell>
     <div class="button-wrapper">
       <button type="button" class="button expanded brand" :disabled="loading" @click="load">
